<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="200dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txtTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/transaction"
            android:textSize="25sp"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/add_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="100dp"
            android:text="@string/add_transaction"
            android:textSize="16sp" />

        <Button
            android:id="@+id/manage_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:layout_marginStart="50dp"
            android:text="@string/manage_transaction"
            android:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>