<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:ignore="ExtraText">
  android:background="@drawable/gradient_background">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="40dp"
      tools:ignore="UselessParent">

    <TextView
        android:id="@+id/manage_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/manage_transaction"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/Listviewtxt"
        android:layout_width="wrap_content"
        android:layout_height="186dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:textSize="12sp" />

    <Button
        android:id="@+id/delete_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="320dp"
        android:text="@string/delete" />


    <Button
        android:id="@+id/modify_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="370dp"
        android:text="Modify"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/search_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="420dp"
        android:text="@string/search" />

  </RelativeLayout>

</RelativeLayout>

