<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    android:background="@drawable/gradient_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="91dp"
            android:src="@drawable/ic_transaction_title"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSelectaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_account"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="91dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/SubAccountSpinner"
            android:layout_width="266dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="86dp"
            android:layout_marginBottom="370dp"
            android:spinnerMode="dropdown"
            android:textColor="@android:color/holo_blue_light"
            tools:ignore="SpeakableTextPresentCheck" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="240dp">

            <ImageView
                android:id="@+id/manage_rect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="86dp"
                android:src="@drawable/ic_add_transaction_rect" />

            <Button
                android:id="@+id/add_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="180dp"
                android:fillColor="#0BCB85"
                android:src="@drawable/ic_add_transaction_text"
                android:text="@string/add_transaction"
                app:layout_constraintTop_toTopOf="@+id/manage_rect" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="400dp"
            android:layout_marginBottom="150dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="86dp"
                android:fillColor="#0BCB85"
                android:src="@drawable/ic_add_transaction_rect" />

            <Button
                android:id="@+id/manage_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/manage_transaction"
                android:layout_marginStart="180dp"
                android:src="@drawable/ic_manage_transaction_text" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>